# controllers/journals.js
@@ -5,14 +5,12 @@ const mongodb = require('../data/database');
 
 const getAllJournalEntries= async (req, res) => {
     //#swagger.tags=['journals']
-    const { id } = req.params;
     try {
-        const journal = await mongodb.getDatabase().db('seerstone').collection('journals').findOne({ _id: ObjectId(id) });
-        if (journal) {
-            res.status(200).json(journal);
-        } else {
-            res.status(404).json({ error: 'Journal entry not found' });
-        }
+        const result = await mongodb.getDatabase().db('seerstone').collection('journals').find();
+        result.toArray().then((journals) => {
+            res.setHeader('Content-Type', 'application/json');
+            res.status(200).json(journals);
+        });
     } catch (error) {
         console.error(error);
         res.status(500).json({ error: 'Internal Server Error' });
@@ -21,14 +19,22 @@ const getAllJournalEntries= async (req, res) => {
 
 const getJournalEntryById = async (req, res) => {
     //#swagger.tags=['journals']
-    const { id } = req.params;
+    const journalId = req.params.id;
+    if (!ObjectId.isValid(journalId)) {
+        return res.status(400).json({ error: 'Invalid journal ID' });
+    }
+
     try {
-        const journal = await mongodb.getDatabase().db('seerstone').collection('journals').findOne({ _id: ObjectId(id) });
-        if (journal) {
-            res.status(200).json(journal);
-        } else {
-            res.status(404).json({ error: 'Journal entry not found' });
-        }
+        const cursor = await mongodb.getDatabase().db('seerstone').collection('journals').find({ _id: new ObjectId(journalId) });
+
+        cursor.toArray().then((journals) => {
+
+            if (journals.length === 0) {
+                return res.status(404).json({ error: 'Journal not found' });
+            }
+            res.setHeader('Content-Type', 'application/json');
+            res.status(200).json(journals[0]);
+        });
     } catch (error) {
         console.error(error);
         res.status(500).json({ error: 'Internal Server Error' });
@@ -43,30 +49,51 @@ const createJournalEntry = async (req, res) => {
         entry, 
         inspiration_id 
     } = req.body;
+
+    // Data validation
+    if (!user_id || !date || !entry || !inspiration_id) {
+        return res.status(400).json({ error: "user_id, date, entry and inspiration_id are required fields." });
+    }
+
+    // Create the new journal object
+
     const newJournal = {
         user_id,
         date,
         entry,
         inspiration_id
     };
+    
     try {
-        const result = await mongodb.getDatabase().db('seerstone').collection('journals').insertOne(newJournal);
-        res.status(201).json(result.ops[0]);
+        const response = await mongodb.getDatabase().db('seerstone')
+            .collection('journals')
+            .insertOne(newJournal);
+
+        // Check if the journal was successfully updated
+        if (response.acknowledged) {
+            return res.status(201).json({ message: 'Journal successfully created', journal: newJournal });// Successfully created
+        } else {
+            return res.status(500).json('Some error occurred while creating the journal.');// Internal server error
+        }
     } catch (error) {
-        console.error(error);
-        res.status(500).json({ error: 'Internal Server Error' });
+        return res.status(500).json(error.message || 'Some error occurred while creating the journal.');// Internal server error
     }
 };
 
 const updateJournalEntryById = async (req, res) => {
     //#swagger.tags=['journals']
-    const { id } = req.params;
+    const journalId = new ObjectId(req.params.id);
     const {
         user_id,
         date,
         entry,
         inspiration_id
     } = req.body;
+
+    // Data validation
+    if (!user_id || !date || !entry || !inspiration_id) {
+        return res.status(400).json({ error: "user_id, date, entry and inspiration_id are required fields." });
+    }
 
     const updatedJournal = {
         user_id,
@@ -76,30 +103,29 @@ const updateJournalEntryById = async (req, res) => {
     };
 
     try {
-        const result = await mongodb.getDatabase().db('seerstone').collection('journals').updateOne(
-            { _id: ObjectId(id) },
-            { $set: updatedJournal }
-        );
-        if (result.modifiedCount === 1) {
-            res.status(200).json({ message: 'Journal entry updated successfully' });
+        // Update the journal entry in the database
+        const response = await mongodb.getDatabase().db('seerstone').collection('journals').replaceOne({ _id: journalId }, updatedJournal);
+
+        // Check if the journal entry was successfully updated
+        if (response.modifiedCount > 0) {
+            return res.status(200).json({ message: 'Journal successfully updated', journal: updatedJournal}); // Successfully updated
         } else {
-            res.status(404).json({ error: 'Journal entry not found' });
+            return res.status(404).json({ error: "Journal not found." }); // Journal with given ID not found
         }
     } catch (error) {
-        console.error(error);
-        res.status(500).json({ error: 'Internal Server Error' });
+        return res.status(500).json(error.message || 'Some error occurred while updating the journal.'); // Internal server error
     }
 };
 
 const deleteJournalEntryById = async (req, res) => {
     //#swagger.tags=['journals']
-    const { id } = req.params;
     try {
-        const result = await mongodb.getDatabase().db('seerstone').collection('journals').deleteOne({ _id: ObjectId(id) });
-        if (result.deletedCount === 1) {
-            res.status(200).json({ message: 'Journal entry deleted successfully' });
+        const journalId = new ObjectId(req.params.id);
+        const response = await mongodb.getDatabase().db('seerstone').collection('journals').deleteOne({ _id: journalId });
+        if (response.deletedCount > 0) {
+            res.status(200).json({ message: 'Journal successfully deleted'});
         } else {
-            res.status(404).json({ error: 'Journal entry not found' });
+            res.status(404).json(response.error || 'Some error occurred while deleting the journal.');
         }
     } catch (error) {
         console.error(error);
@@ -109,9 +135,23 @@ const deleteJournalEntryById = async (req, res) => {
 
 const getJournalEntriesByUserId = async (req, res) => {
     //#swagger.tags=['journals']
-    const { id } = req.params;
+    const { user_id } = req.params; // Access user_id from route parameters
+    
+    if (!user_id) {
+        return res.status(400).json({ error: 'user_id is required' });
+    }
+    
     try {
-        const journals = await mongodb.getDatabase().db('seerstone').collection('journals').find({ user_id: id }).toArray();
+        const journals = await mongodb.getDatabase()
+            .db('seerstone')
+            .collection('journals')
+            .find({ user_id: user_id })
+            .toArray();
+
+        if (journals.length === 0) {
+            return res.status(404).json({ error: 'No journals found for the provided user_id' });
+        }
+
         res.status(200).json(journals);
     } catch (error) {
         console.error(error);
@@ -121,9 +161,12 @@ const getJournalEntriesByUserId = async (req, res) => {
 
 const getJournalEntriesByUserIdAndInspirationId = async (req, res) => {
     //#swagger.tags=['journals']
-    const { id, inspirationId } = req.params;
+    const { user_id, inspiration_id } = req.params; // Use req.params to access route parameters
+    if (!user_id || !inspiration_id) {
+        return res.status(400).json({ error: 'user_id and inspiration_id are required' });
+    }
     try {
-        const journals = await mongodb.getDatabase().db('seerstone').collection('journals').find({ user_id: id, inspiration_id: inspirationId }).toArray();
+        const journals = await mongodb.getDatabase().db('seerstone').collection('journals').find({ user_id, inspiration_id }).toArray();
         res.status(200).json(journals);
     } catch (error) {
         console.error(error);
