# routes/plans.js
@@ -10,7 +10,7 @@ router.post('/', isAuthenticated, plansController.createPlanEntry);
 router.get('/:id', isAuthenticated, plansController.getPlanEntryById);
 router.put('/:id', isAuthenticated, plansController.updatePlanEntryById);
 router.delete('/:id', isAuthenticated, plansController.deletePlanEntryById);
-router.get('/user/:user_id', isAuthenticated, plansController.getPlanEntriesByUserId);
-router.get('/user/:id/inspiration/:id', isAuthenticated, plansController.getPlanEntriesByUserIdAndInspirationId);
+router.get('/user_id/:user_id', isAuthenticated, plansController.getPlanEntriesByUserId);
+router.get('/user_id/:user_id/inspiration_id/:inspiration_id', isAuthenticated, plansController.getPlanEntriesByUserIdAndInspirationId);
 
 module.exports = router;
